donload de arquivos especificos do modal ativado pelo botão download

--- a/webscrapin/etlsuicidio.ipynb
+++ b/webscrapin/etlsuicidio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -20,15 +20,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importando bibliotecas necessarias para manipualçao de tela\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\tonho\\AppData\\Local\\Temp\\ipykernel_5540\\3734789300.py:14: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "C:\\Users\\tonho\\AppData\\Local\\Temp\\ipykernel_1064\\3734789300.py:14: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  driver = webdriver.Chrome(r'C:\\Users\\tonho\\OneDrive\\Documentos\\portifoliodedados\\webscaping\\chromedriver-win64\\chromedriver.exe', options=chrome_options)\n"
      ]
     }
@@ -51,26 +58,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Abrindo o site de onde os dados serão acessados.\n",
+    "Neste caso usaremos um grupo especificos de dados do Atlas da violencia no Brasil.\n",
+    "Os dados acessados estão disponiveis em arquivos .csv disponiveis para doenload pro grupos sociais estebalecidos na proria psquisa\n",
+    " \n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "#Estabelece o tempo \n",
-    "#wait = WebDriverWait(driver, 10)\n",
-    "#aguarda até o elemento com certo ID ser clicável\n",
-    "#wait.until(EC.element_to_be_clickable((By.ID, 'id_do_elemento')))\n",
+    "#Estabelece conexaão com a janela desejada\n",
     "\n",
     "driver.get(\"https://www.ipea.gov.br/atlasviolencia/filtros-series/16/suicidios\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Iniciando extração por webscraping com a biblioteca selenium "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#baixando o metadados .txt\n",
     "# Esperar até que o botão de download seja clicável por até 10 segundos\n",
     "wait = WebDriverWait(driver, 10)\n",
     "botao_download = wait.until(EC.element_to_be_clickable((By.XPATH, '//*[@id=\"filtros\"]/div/div[2]/div[2]/div[4]/div/table/tbody/tr[2]/td[9]')))\n",
@@ -81,14 +103,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#baixando o metadados .csv\n",
+    "# Esperar até que o botão de download seja clicável por até 10 segundos\n",
+    "import time\n",
+    "wait = WebDriverWait(driver, 10)\n",
+    "botao_abre_modalDownload = wait.until(EC.element_to_be_clickable((By.XPATH,'//*[@id=\"filtros\"]/div/div[2]/div[2]/div[4]/div/table/tbody/tr[2]/td[8]')))\n",
+    "# Clique no botão para abrir a lista de csv\n",
+    "botao_abre_modalDownload.click() \n",
     "\n",
-    "botoes = driver.find_element(By.CSS_SELECTOR,'i.fa.fa-file-excel-o')\n",
-    "# Clicar no segundo botão na lista (índice 1, pois os índices começam do zero)\n",
-    "botoes.click()"
+    "\n",
+    "\n",
+    "\n",
+    "# Mude o foco para a nova janela (modal-downloads)\n",
+    "botao_download = wait.until(EC.element_to_be_clickable((By.XPATH,'//*[@id=\"modalDownloads\"]/div/div/div[2]/div/div/div[1]/div/table/tr[1]/td/form/button')))\n",
+    "botao_download.click()\n",
+    "#driver.close()\n",
+    "\n",
+    "#observação: o mesmo objeto wait dvera ser usado durante todo bloo de processo que voce for executar, do contrario instanciar\n",
+    "# novo objeto para nao gerar conflito. \n",
+    "\n",
+    "#incluir um try exception\n",
+    "#automatizr donwload de todos os arquivos usando uma string generica com for "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Acessando arquivos do dowload"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#tranform\n",
+    "#acessando arquivo do dowload\n"
    ]
   }
  ],
